<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textSyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qu6" />

            <EditText
                android:id="@+id/qu6primeMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:hint="@string/enter_the_text_here"
                android:inputType="textCapWords|textCapSentences"
                android:textSize="24sp" />

            <Button
                style="@style/btnStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnprime"
                android:text="@string/conform" />

            <TextView
                style="@style/textSyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qu5" />

            <CheckBox
                android:id="@+id/qu5Larry"
                style="@style/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxqu5Clicked"
                android:text="@string/larry_page" />

            <CheckBox
                android:id="@+id/qu5Eduar"
                style="@style/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxqu5Clicked"
                android:text="@string/eduardo_saverin" />

            <CheckBox
                android:id="@+id/qu5Sergey"
                style="@style/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxqu5Clicked"
                android:text="@string/sergey_brin" />


            <TextView
                style="@style/textSyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qu1" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/qu1True"
                    style="@style/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioqu1Clicked"
                    android:text="@string/true1" />

                <RadioButton
                    android:id="@+id/qu1Maybe"
                    style="@style/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioqu1Clicked"
                    android:text="@string/maybe" />

                <RadioButton
                    android:id="@+id/qu1False"
                    style="@style/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioqu1Clicked"
                    android:text="@string/false1" />

            </RadioGroup>

            <TextView
                android:id="@+id/qu2"
                style="@style/textSyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qu2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:id="@+id/qu2True"
                    style="@style/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioqu2Clicked"
                    android:text="@string/true1" />

                <RadioButton
                    android:id="@+id/qu2Maybe"
                    style="@style/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioqu2Clicked"
                    android:text="@string/maybe" />

                <RadioButton
                    android:id="@+id/qu2False"
                    style="@style/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioqu2Clicked"
                    android:text="@string/false1" />

            </RadioGroup>


            <TextView
                style="@style/textSyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qu3" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/qu3True"
                    style="@style/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioqu3Clicked"
                    android:text="@string/true1" />

                <RadioButton
                    android:id="@+id/qu3Maybe"
                    style="@style/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioqu3Clicked"
                    android:text="@string/maybe" />

                <RadioButton
                    android:id="@+id/qu3False"
                    style="@style/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioqu3Clicked"
                    android:text="@string/false1" />

            </RadioGroup>

            <TextView
                style="@style/textSyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qu4" />

            <CheckBox
                style="@style/radio"
                android:id="@+id/qu4Windows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/windows_os"
                android:onClick="onCheckboxqu4Clicked"/>

            <CheckBox
                style="@style/radio"
                android:id="@+id/qu4Both"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:onClick="onCheckboxqu4Clicked"/>

            <CheckBox
                style="@style/radio"
                android:id="@+id/qu4MacOs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mac_os"
                android:onClick="onCheckboxqu4Clicked"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:onClick="submitAllAns"
                android:text="@string/confrom"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>